# dongol

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPT.md  CONTRIBUTING.md  DEMO_SUMMARY.md  Dockerfile  FINAL_REPORT.md  LICENSE  MANIFEST.in  Makalah_DONGOL_Ardellio_Satria_Anindito.docx  Makefile  PROJECT_SUMMARY.md  Presentasi_DONGOL_Ardellio.pptx  QUICKSTART.md  README.md  README_MAKALAH.md  SECURITY.md  TESTING_REPORT.md  __init__.py  benchmark.py  buat_poster.py  buat_ppt.py  docker-compose.yml  install.ps1  pyproject.toml  requirements.txt  setup.py  test_api.py  ~$kalah_DONGOL_Ardellio_Satria_Anindito.docx
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: release.yml  tests.yml
api/: server.py
cli/: main.py
config/: default.yaml
core/: __init__.py  engine.py
docs/id/: README.md
dongol/: __init__.py
examples/: agent_workflow.py  basic_usage.py
plugins/: __init__.py
real_world/: REAL_WORLD_RESULTS.md  drive_organizer.py  execute_organization.py  performance_comparison.py
scripts/: install.ps1  install.sh
tests/: __init__.py  test_engine.py
