[build-system]
requires = ["hatchling>=1.13.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dongol"
version = "0.1.0"
description = "DONGOL - Distributed Orchestration for Navigating Goals and Operational Logic"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ardellio Satria Anindito", email = "contact@dongol.io"}
]
maintainers = [
    {name = "DONGOL Team", email = "team@dongol.io"}
]
keywords = [
    "parallel",
    "task-management",
    "async",
    "chunking",
    "distributed",
    "indonesia",
    "productivity",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Natural Language :: Indonesian",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "orjson>=3.9.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
# API and Web
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

# LLM Integration
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
]

# Performance
perf = [
    "aioprocessing>=2.0.0",
    "uvloop>=0.19.0; platform_system != 'Windows'",
]

# Storage
storage = [
    "sqlite-vec>=0.1.0",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

# All features
all = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "aioprocessing>=2.0.0",
    "uvloop>=0.19.0; platform_system != 'Windows'",
    "sqlite-vec>=0.1.0",
]

[project.scripts]
dongol = "dongol.cli.main:main"
dong = "dongol.cli.main:main"
dongol-server = "dongol.api.server:main"
dongol-worker = "dongol.worker:main"

[project.urls]
Homepage = "https://dongol.io"
Documentation = "https://docs.dongol.io"
Repository = "https://github.com/dongol-org/dongol"
Issues = "https://github.com/dongol-org/dongol/issues"
Changelog = "https://github.com/dongol-org/dongol/blob/main/CHANGELOG.md"
Discussions = "https://github.com/dongol-org/dongol/discussions"
Funding = "https://github.com/sponsors/dongol-org"

[project.entry-points."dongol.plugins"]
default = "dongol.plugins:DefaultPlugin"

[tool.hatch.version]
path = "dongol/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dongol"]

[tool.hatch.build.targets.sdist]
include = [
    "/dongol",
    "/docs",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "dongol"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["dongol"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "dongol/__init__.py",
    "pyproject.toml:version",
]
